# langchain-linkedin-data-processing

./: .gitignore  pyproject.toml
src/linkedin_data_processing/: app.py  output_parsers.py
src/linkedin_data_processing/agents/: linkedin_lookup_agent.py
src/linkedin_data_processing/third_parties/: linkedin.py
src/linkedin_data_processing/tools/: tools.py
tests/: test_linkedin_lookup.py
