[project]
name = "linkedin-data-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Caldas",email = "gcaldasl2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "openai (>=1.75.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)"
]

[tool.poetry]
packages = [{include = "linkedin_data_processing", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
